# GiftsTracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.ini.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt  update_messages.py
app/commands/: __init__.py  base.py  start.py  status.py
app/core/: config.py  constants.py  logging.py
app/database/: __init__.py  base.py  middleware.py  models.py
app/database/crud/: __init__.py  gift.py  gifts.py
app/database/dto/: __init__.py  gifts.py
app/database/models/: gifts.py
app/methods/: __init__.py  fetch_gifts.py  sticker_set.py  upload_sticker.py
app/notifications/: __init__.py  constants.py  crafts.py  gifts.py  messages.py  sender.py  upgrade.py  upgrades.py
app/services/: __init__.py  changes.py  emoji_pack.py  gift_changes.py  gift_crafts.py  gift_monitor.py  gift_processor.py  gift_upgrades.py  gifts.py  monitor.py  new_gift.py  run.py  upgrades.py
app/utils/: __init__.py  data.py  decode.py  gifts.py  history.py  json_codec.py  telegram.py  text.py
